# feneck

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  ruff.toml  sitemap.xml  tox.ini
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml
docs/: index.md  modules.md
modules/: index.html
search/: search_index.json
src/feneck/: __init__.py  _errors.py  base.py  bifpn.py  carafe.py  common_layers.py  custom_pan.py  dyhead.py  extender.py  fpn.py  hrfpn.py  lrfpn.py  nasfpn.py  pafpn.py  simple_fpn.py
tests/: base_test.py  test_bifpn.py  test_carafe.py  test_custom_pan.py  test_dyhead.py  test_extender.py  test_fpn.py  test_hrfpn.py  test_lrfpn.py  test_nasfpn.py  test_pafpn.py  test_simple_fpn.py
