[project]
name = "feneck"
version = "0.1.0"
description = "Feature pyramid network implementations for computer vision tasks"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "vncntcmnn", email = "vincentcamenen@gmail.com" }
]
keywords = ["computer-vision", "fpn", "feature-pyramid", "object-detection", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
cpu = [
    "torch>=2.0.0; platform_machine != 'x86_64' or sys_platform != 'darwin'",
    "torchvision>=0.15.0; platform_machine != 'x86_64' or sys_platform != 'darwin'",
]
cu118 = [
    "torch>=2.0.0; platform_machine != 'x86_64' or sys_platform != 'darwin'",
    "torchvision>=0.15.0; platform_machine != 'x86_64' or sys_platform != 'darwin'",
]
cu124 = [
    "torch>=2.0.0; platform_machine != 'x86_64' or sys_platform != 'darwin'",
    "torchvision>=0.15.0; platform_machine != 'x86_64' or sys_platform != 'darwin'",
]
macos-x86 = [
    "torch==2.2.0; platform_machine == 'x86_64' and sys_platform == 'darwin'",
    "torchvision==0.17.0; platform_machine == 'x86_64' and sys_platform == 'darwin'",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu118" },
        { extra = "cu124" },
        { extra = "macos-x86" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu118", extra = "cu118" },
    { index = "pytorch-cu124", extra = "cu124" },
    { index = "pytorch-cpu", extra = "macos-x86" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu118", extra = "cu118" },
    { index = "pytorch-cu124", extra = "cu124" },
    { index = "pytorch-cpu", extra = "macos-x86" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"